--- a/.github/workflows/lint-flake8.yml
+++ b/.github/workflows/lint-flake8.yml
@@ -21,4 +21,4 @@ jobs:
 
        - name: Run Flake8
          run: |
-           flake8 --config=.flake8 .
+           cd sdk/orm-django && flake8 --config=.flake8 .
