--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -18,8 +18,14 @@ jobs:
        - name: Install dependencies
          run: |
            python -m pip install --upgrade pip
+           pip install mypy
            pip install flake8
 
        - name: Run Flake8
          run: |
-           cd sdk/orm-django && flake8 --config=.flake8 .
+           cd flake8 --config=.flake8 .
+
+       - name: Run Mypy
+         run: |
+           cd sdk && mypy . && cd -
+           cd examples && mypy .
