--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -13,7 +13,8 @@ jobs:
     build-n-publish:
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/checkout@v2
+        - name: Checkout
+          uses: actions/checkout@v2
 
         - name: Install dependencies
           run: |
