--- a/examples/django-encryption-example/pyproject.toml
+++ b/examples/django-encryption-example/pyproject.toml
@@ -27,6 +27,7 @@ django-stubs = "^1.15.0"
 types-requests = "^2.28.11.15"
 autopep8 = "^2.0.2"
 ipython = "^8.11.0"
+django-coverage = "^1.2.4"
 
 [build-system]
 requires = ["poetry-core"]
