Updating the workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,35 @@ on:
           - major
 
 jobs:
+  update-readme:
+    name: Update README
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.CICD_RELEASES_PAT }}
+
+      - name: Update README to reference Vault version ${{ inputs.vault_version }}
+        env:
+          LINE: This package is compatible with Vault version
+        run: |
+          sed -i -E \
+            "s|$LINE [0-9]+\.[0-9]+\.[0-9]+|$LINE ${{ inputs.vault_version }}|g" \
+            $(git ls-files README.md '**/README.md')
+      - name: Commit and push changes
+        # even though we're using `if: github.event_name == 'workflow_dispatch'` in the job definition
+        # we still want to be extra safe and make sure we don't push changes to workflow that is triggered by push event.
+        if: github.event_name != 'push'
+        run: |
+          git config --global user.email "cicd@piiano.com"
+          git config --global user.name "Github Actions"
+          git add README.md '**/README.md'
+          git status
+          git commit -a -m 'Update README.md files to Vault version ${{ inputs.vault_version }}'
+          git push
+
   build-n-publish:
     runs-on: ubuntu-latest
     steps:
@@ -29,6 +58,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.CICD_RELEASES_PAT }}
+          # explicitly set ref so we pull based on branch name and get latest changes and not by commit hash and miss out
+          # changes that are committed by the workflow itself
+          ref: ${{ github.ref_name }}
 
       - name: Update vault version
         run: |
