--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,6 +53,7 @@ jobs:
 
   build-n-publish:
     runs-on: ubuntu-latest
+    needs: update-readme
     steps:
       - name: Checkout
         uses: actions/checkout@v3
