--- a/.github/workflows/test-orm-django.yml
+++ b/.github/workflows/test-orm-django.yml
@@ -17,7 +17,7 @@ jobs:
           - name: Setup Python
             uses: actions/setup-python@v2
             with:
-              python-version: '3.x'
+              python-version: '3.11.5'
 
           - name: Install poetry
             run: |
